# EndotypY

./: .gitignore  All_NMD_Genes.txt  EndotypY.html  HC_genes.txt  LICENSE  README.md  UNION_CMS.tsv  cms_genes.tsv  cms_genes.txt  concept.html  dev_package.ipynb  endotypes_HC_Reactome_Pathways_2024_endotypes.tsv  endotypes_IBD_Reactome_Pathways_2024.tsv  endotypes_PAIN_Reactome_Pathways_2024_endotypes.tsv  genindex.html  ibd_risk_genes_mini.txt  ines_ppi_edgelist.tsv  monocyte.tsv  ppi_core.tsv  ppi_heart.tsv  ppi_skeletal muscle.tsv  requirements.txt  seed_genes_PAIN.csv  seed_genes_PAIN.txt  setup.py
endoviz-main/: .gitignore  01_get_terms.py  02_create_embeddings_for_terms.py  03_aggregate_embeddings.py  04_reduce.py  05_merge_and_add_degree.py  05_merge_and_add_degree_concat_terms_parquet.py  05_merge_and_add_degree_parquet.py  05b_merge_and_degree.py  Makefile  README.md  analyze_term_distribution.py  export_embeddings.py  get_terms.py  graph_based_embeddings.py  pyproject.toml  sanity.py
endoviz-main/input/: edges_IBD.tsv  nodes.tsv  nodes_HC.tsv  nodes_IBD.tsv
kl-tree-cluster-main/: .gitignore  README.md  pyproject.toml  quick_start.py  requirements.txt
kl-tree-cluster-main/docs/: INDEX.md  INTEGRATION_SUMMARY.md  LINKAGE_TO_DAG.md  LINKAGE_TO_DAG_QUICK.md  QUICK_REFERENCE.md  README.md  SAGEMATH_NETWORKX_GUIDE.md  SETUP_COMPLETE.md  STATUS.txt  UV_SETUP.md
kl-tree-cluster-main/kl_clustering_analysis/: __init__.py
kl-tree-cluster-main/kl_clustering_analysis/hierarchy_analysis/: __init__.py  cluster_decomposition.py  cmi.py  decomposition_utils.py  divergence_metrics.py  kl_correlation_analysis.py  local_kl_utils.py  mutual_info_utils.py  statistical_tests.py
kl-tree-cluster-main/kl_clustering_analysis/misc/: .envrc  DIAGNOSTIC_REPORT.md  QUICK_START.sh  STATUS.txt  __init__.py  check_cluster_assignments.py  cluster_assignment_analysis.json  debug_clustering.py  debug_clustering_extended.py  debug_local_gate.py  diagnose_binarization.py  example_kl_divergence_analysis.py  example_tsne_visualization.py  plot_cluster_trees.py  profile_clustering.py  profiling_report_20251029_151137.txt  significance_diagnostics.py  statistical_tests.py.backup  thresholding.py
kl-tree-cluster-main/kl_clustering_analysis/plot/: cluster_tree_visualization.py  interactive_visualizations.py  poset_tree_visualization.py  siginficance_plot.py  validation_visualizations.py
kl-tree-cluster-main/kl_clustering_analysis/tests/: conftest.py  test_cluster_assignments.py  (+6 more)
kl-tree-cluster-main/notebooks/: clustering_pipe_line.ipynb  new_clustering_application.ipynb
kl-tree-cluster-main/simulation/: __init__.py  generate_random_feature_matrix.py
(+95 files in other folders)
