[project]
name = "kl-clustering-analysis"
version = "0.1.0"
description = "KL-divergence based hierarchical clustering analysis with NetworkX and advanced visualization"
requires-python = ">=3.11"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
    "networkx>=3.1",
    "plotly>=5.14.0",
    "scikit-image>=0.22.0",
    "numba>=0.59.0",
    "statsmodels>=0.14.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipython>=8.12.0",
    "notebook>=7.0.0",
    "pytest>=7.4.0",
]
all = [
    "jupyter>=1.0.0",
    "ipython>=8.12.0",
    "notebook>=7.0.0", 
    "pytest>=7.4.0",
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
